--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,7 @@ body {
 
 
 .myH2 {
+    color: #fff;
 	text-align:center;
 	font-size: 4rem;
 }
@@ -532,7 +533,7 @@ body {
       margin: 0;
       font-size: 14px;
       line-height: 20px;
-      color: rgb(17 17 17 / 84%);
+      color: rgba(255, 255, 255, 0.84);
       transition: all 0.5s ease;
     }
   }
@@ -679,6 +680,7 @@ body {
   }
 
   .features li {
+    color: #ffffff;
     margin: 1rem 0;
     opacity: 0.9;
     display: flex;
@@ -1392,7 +1394,7 @@ position:absolute;
   .login-box .user-box input:valid ~ label {
     top: -20px;
     left: 0;
-    color: #03e9f4;
+    color: #E247BC;
     font-size: 12px;
   }
   
@@ -1400,7 +1402,7 @@ position:absolute;
     position: relative;
     display: inline-block;
     padding: 10px 20px;
-    color: #03e9f4;
+    color: #E247BC;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -1411,13 +1413,13 @@ position:absolute;
   }
   
   .login-box button:hover {
-    background: #03e9f4;
+    background: #E247BC;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
+    box-shadow: 0 0 5px #E247BC,
+                0 0 25px #E247BC,
+                0 0 50px #E247BC,
+                0 0 100px #E247BC;
   }
   
   .login-box button span {
@@ -1430,7 +1432,7 @@ position:absolute;
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
+    background: linear-gradient(90deg, transparent, #E247BC);
   }
   
   .login-box button span:nth-child(2) {
@@ -1438,7 +1440,7 @@ position:absolute;
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #03e9f4);
+    background: linear-gradient(180deg, transparent, #E247BC);
   }
   
   .login-box button span:nth-child(3) {
@@ -1446,7 +1448,7 @@ position:absolute;
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #03e9f4);
+    background: linear-gradient(270deg, transparent, #E247BC);
   }
   
   
@@ -1455,7 +1457,7 @@ position:absolute;
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
+    background: linear-gradient(360deg, transparent, #E247BC);
   }
   
   /* KEYFRAMES */
@@ -1534,7 +1536,7 @@ position:absolute;
   .login-box select:valid ~ label {
     top: -20px;
     left: 0;
-    color: #03e9f4;
+    color: #E247BC;
     font-size: 12px;
   }
   
@@ -1553,4 +1555,45 @@ position:absolute;
     padding: 0;
     margin: 0;
     outline: none;
+  }
+  ul#allmypeoples {
+    
+    /* position: absolute; */
+    
+    /* margin: 5%; */
+    
+  }
+  
+  ul#allmypeoples li {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #E247BC;
+    margin-bottom: 0.2rem;
+    padding: 0.6rem;
+    text-align: center;
+    text-transform: uppercase;
+    animation: fadeIn 0.5s linear;
+    animation-fill-mode: both;
+  }
+  
+  
+  @for $i from 1 through $total-items {
+    ul#allmypeoples li:nth-child(#{$i}) {
+      animation-delay: 0.25s * $i;
+    }
+  }
+  
+  
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+      top: 100px;
+    }
+    75% {
+      opacity: 0.5;
+      top: 0px;
+    }
+    100% {
+      opacity: 1;
+    }
   }
